add note real word ex

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Algorithms</title>
 </head>
 <body>
-    <script src="js/insertionsort.js"></script>
+    <script src="js/insertionsort/insertionsort.js"></script>
 </body>
 </html>
