--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Algorithms</title>
-</head>
-<body>
-    <script src="js/insertionsort/insertionsort.js"></script>
-</body>
+  </head>
+  <body>
+    <script src="js/BinarySearch/BinarySearch.js"></script>
+  </body>
 </html>
