implement mergeSort and edit in InsertionSort

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Algorithms</title>
   </head>
   <body>
-    <script src="js/BinarySearch/BinarySearch.js"></script>
+    <script src="js/MergeSort/MergeSort.js"></script>
   </body>
 </html>
